--- a/README
+++ b/README
@@ -1,16 +1,7 @@
 Ledger-Converter
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
-
+This is a package that provides conversion logic from various transaction feed
+formats into ledger cli format.
 
 INSTALLATION
 
@@ -27,20 +18,6 @@ After installing, you can find documentation for this module with the
 perldoc command.
 
     perldoc Ledger::Converter
-
-You can also look for information at:
-
-    RT, CPAN's request tracker
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Ledger-Converter
-
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Ledger-Converter
-
-    CPAN Ratings
-        http://cpanratings.perl.org/d/Ledger-Converter
-
-    Search CPAN
-        http://search.cpan.org/dist/Ledger-Converter/
 
 
 LICENSE AND COPYRIGHT
